--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.android.application" >
 
     <application
+        android:name=".GlobalData"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -27,6 +28,12 @@
             android:name=".activities.ViewActivity"
             android:label="@string/title_activity_view" >
         </activity>
+
+        <service
+            android:name=".services.TaskAlertService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
