--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
             android:enabled="true"
             android:exported="false" >
         </service>
+
+        <receiver
+            android:name=".TaskNotificationReceiver"
+            android:enabled="true"
+            android:exported="false" >
+        </receiver>
     </application>
 
 </manifest>
