--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.application" >
-    
+
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -18,6 +18,7 @@
             android:name=".storage.OldTasksDataProvider"
             android:authorities="com.android.application.storage.OldTasksDataProvider"
             android:exported="false" />
+
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
@@ -42,7 +43,7 @@
         <service
             android:name=".services.TasksRemoveIntentService"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
         </service>
 
         <receiver android:name=".receivers.TaskNotificationReceiver" />
@@ -52,6 +53,11 @@
             </intent-filter>
         </receiver>
 
+        <service
+            android:name=".services.TaskNotifyService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
 
 </manifest>
